Fixed extra gap in side bar and removed pic movement in main page

--- a/css/dept.css
+++ b/css/dept.css
@@ -10,9 +10,9 @@ body,html{
 	font-weight: bold;
 	font-size: 2.5vh;
 }
-#contact{
+/*#contact{
 	margin-bottom: 	5vh;
-}
+}*/
 .buul {
 	position: relative;
 	left: 15px;
